# dice-roller

./: CMakeLists.txt  README.md
src/: main.c  main.cpp
